set(TEST_TARGETS)
add_subdirectory(z3)
add_subdirectory(solidity)
add_subdirectory(duckdb)
add_subdirectory(olive)
add_subdirectory(Heimer)
add_subdirectory(doxygen)
add_subdirectory(Sourcetrail)
file(COPY lit.local.cfg DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
function(get_all_targets var)
    set(targets)
    get_all_targets_recursive(targets ${CMAKE_CURRENT_SOURCE_DIR})
    set(${var} ${targets} PARENT_SCOPE)
endfunction()

macro(get_all_targets_recursive targets dir)
    get_property(subdirectories DIRECTORY ${dir} PROPERTY SUBDIRECTORIES)
    foreach(subdir ${subdirectories})
        get_all_targets_recursive(${targets} ${subdir})
    endforeach()

    get_property(current_targets DIRECTORY ${dir} PROPERTY BUILDSYSTEM_TARGETS)
    list(APPEND ${targets} ${current_targets})
endmacro()

get_all_targets(all_targets)
foreach(_target ${all_targets})
  list(FIND TEST_TARGETS _target output)
  if (NOT output)
    list(APPEND EXCLUDE_FROM_ALL output)
  endif()
  add_dependencies(${_target} build-timeit)
endforeach()
